# rust-sessions

./: Cargo.toml  README.md  fp.md
Readme/: computer-memory.md  fp.md  pointer.md  system-architecture.md
data/: csv_data.csv  testing.csv
src/: arithmetic_ops.rs  book.rs  cache.rs  calculator.rs  char.rs  charac.rs  check_func.rs  collections.rs  constructor.md  constructor.rs  constructors.rs  f64operation.rs  float.rs  floating_points.rs  fp.md  input_output.rs  lib.rs  main.rs  pointer.md  primitive_data_types.rs  signed.rs  signed_integer.rs  signed_integers.rs  signed_operation.rs  string.rs  string_operations.rs  string_ops.rs  struct.rs  student_reg.rs  student_registry.rs  types.rs  u8operation.rs  unsigned.rs  unsigned_integer.rs  unsigned_operation.rs  userRegistry.rs  user_book_constructor.rs  user_registry.rs  utils.rs
src/assignment_task/: csv_data_processor.rs  mod.rs
src/backend/: Cargo.toml
src/backend/src/: .env  main.rs
src/backend/src/routes/: handle_fetch_weather.rs  handle_name.rs  handle_weather.rs  handle_weather_request.rs  mod.rs
src/day_01/: enums.rs  structs.rs
src/day_02/: mod.rs  strings.rs  vectors.rs
src/my_functions/: check_func.rs
src/projects/: mod.rs
src/session_04/: logging.rs  serde.rs
src/session_five/: custom_smart_pointer.rs  mod.rs  overriding_debug.rs  refernce_count.rs  traits_variables.rs
src/session_four/: debugging.rs  mod.rs
src/session_one/: structs.rs
src/session_six/: interior_mutability.rs  mod.rs
src/session_three/: mod.rs  (+1 more)
tests/: test_cache.rs
traits/: 00_intro.rs  14_outro.rs
(+30 files in other folders)
