[package]
name = "proj_14_03_25"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = []}
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"